fixed extra space

--- a/src/styles/contactUs.scss
+++ b/src/styles/contactUs.scss
@@ -14,7 +14,6 @@
 }
 
 .navLinks {
-  margin-left: 1rem;
   position: relative;
   li {
     font-size: 2.5rem;
